// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProcessDetailsTimeline component tests Snapshot testing for completed state 1`] = `
<Card
  data-ouia-component-id="8035b580-6ae4-4aa8-9ec0-e18e19809e0b"
  data-ouia-component-type="timeline"
  data-ouia-safe={true}
>
  <MockedProcessListModal
    handleModalToggle={[Function]}
    isModalOpen={false}
    modalContent=""
    modalTitle={
      <Title
        headingLevel="h1"
        size="2xl"
      >
        <span>
          
        </span>
      </Title>
    }
  />
  <CardHeader>
    <Title
      headingLevel="h3"
      size="xl"
    >
      Timeline
    </Title>
  </CardHeader>
  <CardBody>
    <Stack
      className="kogito-management-console--timeline"
      hasGutter={true}
    >
      <Split
        className="kogito-management-console--timeline-item"
        hasGutter={true}
        key="7244ba1b-75ec-4789-8c65-499a0c5b1a6f"
      >
        <SplitItem>
          <Tooltip
            content="Something went wrong"
          >
            <ErrorCircleOIcon
              className="kogito-management-console--timeline-status"
              color="var(--pf-global--danger-color--100)"
            />
          </Tooltip>
        </SplitItem>
        <SplitItem
          isFilled={true}
        >
          <TextContent>
            <Text
              component="p"
            >
              End Event 1
              <span>
                <Tooltip
                  content="Human task"
                >
                  <UserIcon
                    className="pf-u-ml-sm"
                    color="var(--pf-global--icon--Color--light)"
                  />
                </Tooltip>
              </span>
              <Text
                component="small"
              >
                Active
              </Text>
            </Text>
          </TextContent>
        </SplitItem>
        <SplitItem />
      </Split>
      <Split
        className="kogito-management-console--timeline-item"
        hasGutter={true}
        key="2f588da5-a323-4111-9017-3093ef9319d1"
      >
        <SplitItem>
          <Tooltip
            content="Active"
          >
            <OnRunningIcon
              className="kogito-management-console--timeline-status"
            />
          </Tooltip>
        </SplitItem>
        <SplitItem
          isFilled={true}
        >
          <TextContent>
            <Text
              component="p"
            >
              Book flight
              <span />
              <Text
                component="small"
              >
                Active
              </Text>
            </Text>
          </TextContent>
        </SplitItem>
        <SplitItem />
      </Split>
      <Split
        className="kogito-management-console--timeline-item"
        hasGutter={true}
        key="6ed7aa17-4bb1-48e3-b34a-5a4c5773dff2"
      >
        <SplitItem>
          <Tooltip
            content="Active"
          >
            <OnRunningIcon
              className="kogito-management-console--timeline-status"
            />
          </Tooltip>
        </SplitItem>
        <SplitItem
          isFilled={true}
        >
          <TextContent>
            <Text
              component="p"
            >
              StartProcess
              <span>
                <Tooltip
                  content="Human task"
                >
                  <UserIcon
                    className="pf-u-ml-sm"
                    color="var(--pf-global--icon--Color--light)"
                  />
                </Tooltip>
              </span>
              <Text
                component="small"
              >
                Active
              </Text>
            </Text>
          </TextContent>
        </SplitItem>
        <SplitItem />
      </Split>
    </Stack>
  </CardBody>
  <MockedJobsPanelDetailsModal
    actionType="Job Details"
    handleModalToggle={[Function]}
    isModalOpen={false}
    job={Object {}}
    modalAction={
      Array [
        <Button
          onClick={[Function]}
          variant="primary"
        >
          OK
        </Button>,
      ]
    }
    modalTitle={
      <Title
        headingLevel="h1"
        size="2xl"
      >
        <InfoCircleIcon
          className="pf-u-mr-sm"
          color="var(--pf-global--info-color--100)"
          noVerticalAlign={false}
          size="sm"
        />
        <span>
          Job Details
        </span>
      </Title>
    }
  />
  <JobsCancelModal
    actionType="Job Cancel"
    handleModalToggle={[Function]}
    isModalOpen={false}
    modalContent=""
    modalTitle={null}
  />
</Card>
`;

exports[`ProcessDetailsTimeline component tests Snapshot testing for no service url 1`] = `
<Card
  data-ouia-component-id="8035b580-6ae4-4aa8-9ec0-e18e19809e0b"
  data-ouia-component-type="timeline"
  data-ouia-safe={true}
>
  <MockedProcessListModal
    handleModalToggle={[Function]}
    isModalOpen={false}
    modalContent=""
    modalTitle={
      <Title
        headingLevel="h1"
        size="2xl"
      >
        <span>
          
        </span>
      </Title>
    }
  />
  <CardHeader>
    <Title
      headingLevel="h3"
      size="xl"
    >
      Timeline
    </Title>
  </CardHeader>
  <CardBody>
    <Stack
      className="kogito-management-console--timeline"
      hasGutter={true}
    >
      <Split
        className="kogito-management-console--timeline-item"
        hasGutter={true}
        key="7244ba1b-75ec-4789-8c65-499a0c5b1a6f"
      >
        <SplitItem>
          <Tooltip
            content="Something went wrong"
          >
            <ErrorCircleOIcon
              className="kogito-management-console--timeline-status"
              color="var(--pf-global--danger-color--100)"
            />
          </Tooltip>
        </SplitItem>
        <SplitItem
          isFilled={true}
        >
          <TextContent>
            <Text
              component="p"
            >
              End Event 1
              <span>
                <Tooltip
                  content="Human task"
                >
                  <UserIcon
                    className="pf-u-ml-sm"
                    color="var(--pf-global--icon--Color--light)"
                  />
                </Tooltip>
              </span>
              <Text
                component="small"
              >
                Active
              </Text>
            </Text>
          </TextContent>
        </SplitItem>
        <SplitItem />
      </Split>
      <Split
        className="kogito-management-console--timeline-item"
        hasGutter={true}
        key="2f588da5-a323-4111-9017-3093ef9319d1"
      >
        <SplitItem>
          <Tooltip
            content="Active"
          >
            <OnRunningIcon
              className="kogito-management-console--timeline-status"
            />
          </Tooltip>
        </SplitItem>
        <SplitItem
          isFilled={true}
        >
          <TextContent>
            <Text
              component="p"
            >
              Book flight
              <span />
              <Text
                component="small"
              >
                Active
              </Text>
            </Text>
          </TextContent>
        </SplitItem>
        <SplitItem />
      </Split>
      <Split
        className="kogito-management-console--timeline-item"
        hasGutter={true}
        key="6ed7aa17-4bb1-48e3-b34a-5a4c5773dff2"
      >
        <SplitItem>
          <Tooltip
            content="Active"
          >
            <OnRunningIcon
              className="kogito-management-console--timeline-status"
            />
          </Tooltip>
        </SplitItem>
        <SplitItem
          isFilled={true}
        >
          <TextContent>
            <Text
              component="p"
            >
              StartProcess
              <span>
                <Tooltip
                  content="Human task"
                >
                  <UserIcon
                    className="pf-u-ml-sm"
                    color="var(--pf-global--icon--Color--light)"
                  />
                </Tooltip>
              </span>
              <Text
                component="small"
              >
                Active
              </Text>
            </Text>
          </TextContent>
        </SplitItem>
        <SplitItem />
      </Split>
    </Stack>
  </CardBody>
  <MockedJobsPanelDetailsModal
    actionType="Job Details"
    handleModalToggle={[Function]}
    isModalOpen={false}
    job={Object {}}
    modalAction={
      Array [
        <Button
          onClick={[Function]}
          variant="primary"
        >
          OK
        </Button>,
      ]
    }
    modalTitle={
      <Title
        headingLevel="h1"
        size="2xl"
      >
        <InfoCircleIcon
          className="pf-u-mr-sm"
          color="var(--pf-global--info-color--100)"
          noVerticalAlign={false}
          size="sm"
        />
        <span>
          Job Details
        </span>
      </Title>
    }
  />
  <JobsCancelModal
    actionType="Job Cancel"
    handleModalToggle={[Function]}
    isModalOpen={false}
    modalContent=""
    modalTitle={null}
  />
</Card>
`;

exports[`ProcessDetailsTimeline component tests Snapshot testing for service url available 1`] = `
<Card
  data-ouia-component-id="8035b580-6ae4-4aa8-9ec0-e18e19809e0b"
  data-ouia-component-type="timeline"
  data-ouia-safe={true}
>
  <MockedProcessListModal
    handleModalToggle={[Function]}
    isModalOpen={false}
    modalContent=""
    modalTitle={
      <Title
        headingLevel="h1"
        size="2xl"
      >
        <span>
          
        </span>
      </Title>
    }
  />
  <CardHeader>
    <Title
      headingLevel="h3"
      size="xl"
    >
      Timeline
    </Title>
  </CardHeader>
  <CardBody>
    <Stack
      className="kogito-management-console--timeline"
      hasGutter={true}
    >
      <Split
        className="kogito-management-console--timeline-item"
        hasGutter={true}
        key="69e0a0f5-2360-4174-a8f8-a892a31fc2f9r25e"
      >
        <SplitItem>
          <Tooltip
            content="Something went wrong"
          >
            <ErrorCircleOIcon
              className="kogito-management-console--timeline-status"
              color="var(--pf-global--danger-color--100)"
            />
          </Tooltip>
        </SplitItem>
        <SplitItem
          isFilled={true}
        >
          <TextContent>
            <Text
              component="p"
            >
              Confirm travel
              <span />
              <Text
                component="small"
              >
                <t
                  ago={false}
                  calendar={false}
                  decimal={false}
                  element={null}
                  filter={[Function]}
                  fromNow={true}
                  interval={60000}
                  local={false}
                  onChange={[Function]}
                  titleFormat=""
                  toNow={false}
                  unit={null}
                  unix={false}
                  utc={false}
                  withTitle={false}
                >
                  <Component />
                </t>
              </Text>
            </Text>
          </TextContent>
        </SplitItem>
        <SplitItem />
      </Split>
      <Split
        className="kogito-management-console--timeline-item"
        hasGutter={true}
        key="69e0a0f5-2360-4174-a8f8-a892a31fc2f9"
      >
        <SplitItem>
          <Tooltip
            content="Something went wrong"
          >
            <ErrorCircleOIcon
              className="kogito-management-console--timeline-status"
              color="var(--pf-global--danger-color--100)"
            />
          </Tooltip>
        </SplitItem>
        <SplitItem
          isFilled={true}
        >
          <TextContent>
            <Text
              component="p"
            >
              Confirm travel
              <span>
                <Tooltip
                  content="Human task"
                >
                  <UserIcon
                    className="pf-u-ml-sm"
                    color="var(--pf-global--icon--Color--light)"
                  />
                </Tooltip>
                <Tooltip
                  content="Node has job"
                >
                  <OutlinedClockIcon
                    className="pf-u-ml-sm"
                    color="var(--pf-global--icon--Color--dark)"
                    onClick={[Function]}
                  />
                </Tooltip>
              </span>
              <Text
                component="small"
              >
                <t
                  ago={false}
                  calendar={false}
                  decimal={false}
                  element={null}
                  filter={[Function]}
                  fromNow={true}
                  interval={60000}
                  local={false}
                  onChange={[Function]}
                  titleFormat=""
                  toNow={false}
                  unit={null}
                  unix={false}
                  utc={false}
                  withTitle={false}
                >
                  <Component />
                </t>
              </Text>
            </Text>
          </TextContent>
        </SplitItem>
        <SplitItem>
          <Dropdown
            dropdownItems={
              Array [
                <DropdownItem
                  component="button"
                  onClick={[Function]}
                >
                  Retry
                </DropdownItem>,
                <DropdownItem
                  component="button"
                  onClick={[Function]}
                >
                  Skip
                </DropdownItem>,
                <DropdownItem
                  component="button"
                  id="job-details"
                  onClick={[Function]}
                >
                  Job Details
                </DropdownItem>,
              ]
            }
            isOpen={false}
            isPlain={true}
            onSelect={[Function]}
            position="right"
            toggle={
              <KebabToggle
                id="timeline-kebab-toggle-1"
                onToggle={[Function]}
              />
            }
          />
        </SplitItem>
      </Split>
      <Split
        className="kogito-management-console--timeline-item"
        hasGutter={true}
        key="7244ba1b-75ec-4789-8c65-499a0c5b1a6f"
      >
        <SplitItem>
          <Tooltip
            content="Active"
          >
            <OnRunningIcon
              className="kogito-management-console--timeline-status"
            />
          </Tooltip>
        </SplitItem>
        <SplitItem
          isFilled={true}
        >
          <TextContent>
            <Text
              component="p"
            >
              End Event 1
              <span />
              <Text
                component="small"
              >
                Active
              </Text>
            </Text>
          </TextContent>
        </SplitItem>
        <SplitItem />
      </Split>
      <Split
        className="kogito-management-console--timeline-item"
        hasGutter={true}
        key="2f588da5-a323-4111-9017-3093ef9319d1"
      >
        <SplitItem>
          <Tooltip
            content="Active"
          >
            <OnRunningIcon
              className="kogito-management-console--timeline-status"
            />
          </Tooltip>
        </SplitItem>
        <SplitItem
          isFilled={true}
        >
          <TextContent>
            <Text
              component="p"
            >
              Book flight
              <span>
                <Tooltip
                  content="Node has job"
                >
                  <OutlinedClockIcon
                    className="pf-u-ml-sm"
                    color="var(--pf-global--icon--Color--dark)"
                    onClick={[Function]}
                  />
                </Tooltip>
              </span>
              <Text
                component="small"
              >
                Active
              </Text>
            </Text>
          </TextContent>
        </SplitItem>
        <SplitItem>
          <Dropdown
            dropdownItems={
              Array [
                <DropdownItem
                  component="button"
                  onClick={[Function]}
                >
                  Retrigger node
                </DropdownItem>,
                <DropdownItem
                  component="button"
                  onClick={[Function]}
                >
                  Cancel node
                </DropdownItem>,
                <DropdownItem
                  component="button"
                  id="job-details"
                  onClick={[Function]}
                >
                  Job Details
                </DropdownItem>,
                <DropdownItem
                  component="button"
                  id="job-reschedule"
                  onClick={[Function]}
                >
                  Job Reschedule
                </DropdownItem>,
                <DropdownItem
                  component="button"
                  id="job-cancel"
                  onClick={[Function]}
                >
                  Job Cancel
                </DropdownItem>,
              ]
            }
            isOpen={false}
            isPlain={true}
            onSelect={[Function]}
            position="right"
            toggle={
              <KebabToggle
                id="timeline-kebab-toggle-3"
                onToggle={[Function]}
              />
            }
          />
        </SplitItem>
      </Split>
      <Split
        className="kogito-management-console--timeline-item"
        hasGutter={true}
        key="6ed7aa17-4bb1-48e3-b34a-5a4c5773dff2"
      >
        <SplitItem>
          <Tooltip
            content="Completed"
          >
            <CheckCircleIcon
              className="kogito-management-console--timeline-status"
              color="var(--pf-global--success-color--100)"
            />
          </Tooltip>
        </SplitItem>
        <SplitItem
          isFilled={true}
        >
          <TextContent>
            <Text
              component="p"
            >
              StartProcess
              <span />
              <Text
                component="small"
              >
                <t
                  ago={false}
                  calendar={false}
                  decimal={false}
                  element={null}
                  filter={[Function]}
                  fromNow={true}
                  interval={60000}
                  local={false}
                  onChange={[Function]}
                  titleFormat=""
                  toNow={false}
                  unit={null}
                  unix={false}
                  utc={false}
                  withTitle={false}
                >
                  <Component />
                </t>
              </Text>
            </Text>
          </TextContent>
        </SplitItem>
        <SplitItem />
      </Split>
    </Stack>
  </CardBody>
  <MockedJobsPanelDetailsModal
    actionType="Job Details"
    handleModalToggle={[Function]}
    isModalOpen={false}
    job={Object {}}
    modalAction={
      Array [
        <Button
          onClick={[Function]}
          variant="primary"
        >
          OK
        </Button>,
      ]
    }
    modalTitle={
      <Title
        headingLevel="h1"
        size="2xl"
      >
        <InfoCircleIcon
          className="pf-u-mr-sm"
          color="var(--pf-global--info-color--100)"
          noVerticalAlign={false}
          size="sm"
        />
        <span>
          Job Details
        </span>
      </Title>
    }
  />
  <JobsCancelModal
    actionType="Job Cancel"
    handleModalToggle={[Function]}
    isModalOpen={false}
    modalContent=""
    modalTitle={null}
  />
</Card>
`;
